Added Triplet Network and readability improvements

--- a/01.Vanilla_AE/Vanilla_AE.ipynb
+++ b/01.Vanilla_AE/Vanilla_AE.ipynb
@@ -626,13 +626,7 @@
       "21677/21677 [==============================] - 1s 23us/step - loss: 6.3487e-05 - val_loss: 5.7429e-05\n",
       "Epoch 71/200\n",
       "21677/21677 [==============================] - 1s 24us/step - loss: 5.9449e-05 - val_loss: 5.3913e-05\n",
-      "Epoch 72/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 72/200\n",
       "21677/21677 [==============================] - 1s 28us/step - loss: 5.5579e-05 - val_loss: 5.3825e-05\n",
       "Epoch 73/200\n",
       "21677/21677 [==============================] - 1s 35us/step - loss: 5.1795e-05 - val_loss: 5.0135e-05\n",
@@ -911,7 +905,7 @@
     "history = LossHistory()\n",
     "\n",
     "start = time.time()\n",
-    "with tf.device('/GPU:0'):\n",
+    "with tf.device('/CPU:0'):\n",
     "    autoencoder_train = autoencoder.fit(sample_train_input, sample_train_input,\n",
     "                epochs=epochs,\n",
     "                batch_size=256,\n",
